--- a/package.json
+++ b/package.json
@@ -1,27 +1,20 @@
 {
-  "name": "yarn2nix",
+  "name": "yarn2nix-monorepo",
+  "private": true,
   "version": "1.0.0",
   "description": "Convert packages.json and yarn.lock into a Nix expression that downloads all the dependencies",
-  "main": "index.js",
-  "repository": ".",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/moretea/yarn2nix.git"
+  },
+  "workspaces": [
+    "packages/*"
+  ],
   "author": "Maarten Hoogendoorn <maarten@moretea.nl>",
   "license": "MIT",
   "scripts": {
-    "yarn2nix": "bin/yarn2nix.js",
     "format": "prettier-eslint --write './**/*.{js,jsx,json}'",
     "lint": "eslint ."
-  },
-  "bin": {
-    "yarn2nix": "bin/yarn2nix.js"
-  },
-  "engines" : {
-    "node" : ">=8.0.0"
-  },
-  "dependencies": {
-    "@yarnpkg/lockfile": "^1.1.0",
-    "deep-equal": "^1.0.1",
-    "docopt": "^0.6.2",
-    "ramda": "^0.26.1"
   },
   "devDependencies": {
     "babel-eslint": "^10.0.1",
